2012-03-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Renamed README.txt to README.ja.txt.
	* Added README.en.txt.

2011-07-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Open to public

2011-02-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Start