@@ -85,7 +85,11 @@ struct rbVec3
 
 struct rbMtx3
 {
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     rbVec3 r[3];
+#else
+    rbVec3 c[3];
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 
     rbMtx3();
     rbMtx3( rbReal e00, rbReal e01, rbReal e02,
@@ -93,8 +97,10 @@ struct rbMtx3
             rbReal e20, rbReal e21, rbReal e22 );
     rbMtx3( const rbMtx3& other );
     rbMtx3& operator =( const rbMtx3& other );
-    rbVec3& Row( int i );
-    rbVec3 Column( int i );
+    rbReal& Elem( rbs32 row, rbs32 col );
+    const rbReal& Elem( rbs32 row, rbs32 col ) const;
+    rbVec3 Row( rbs32 i ) const;
+    rbVec3 Column( rbs32 i ) const;
     operator rbReal*();
     void Set( rbReal e00, rbReal e01, rbReal e02,
               rbReal e10, rbReal e11, rbReal e12,
@@ -106,7 +112,7 @@ struct rbMtx3
     void Orthonormalize();
     void Scale( rbReal f );
     rbMtx3 GetTransposed() const;
-    rbMtx3& Transepose();
+    rbMtx3& Transpose();
     rbMtx3 GetInverse() const;
     rbMtx3& Invert();
     rbMtx3 operator +( const rbMtx3& m ) const;
@@ -270,63 +276,116 @@ inline rbMtx3::rbMtx3( rbReal e00, rbReal e01, rbReal e02,
                        rbReal e10, rbReal e11, rbReal e12,
                        rbReal e20, rbReal e21, rbReal e22 )
 {
-    r[0].e[0] = e00;  r[0].e[1] = e01;  r[0].e[2] = e02;
-    r[1].e[0] = e10;  r[1].e[1] = e11;  r[1].e[2] = e12;
-    r[2].e[0] = e20;  r[2].e[1] = e21;  r[2].e[2] = e22;
+    Elem(0,0) = e00;  Elem(0,1) = e01;  Elem(0,2) = e02;
+    Elem(1,0) = e10;  Elem(1,1) = e11;  Elem(1,2) = e12;
+    Elem(2,0) = e20;  Elem(2,1) = e21;  Elem(2,2) = e22;
 }
 
 inline rbMtx3::rbMtx3( const rbMtx3& other )
 {
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     r[0] = other.r[0];
     r[1] = other.r[1];
     r[2] = other.r[2];
+#else
+    c[0] = other.c[0];
+    c[1] = other.c[1];
+    c[2] = other.c[2];
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 }
 
 inline rbMtx3& rbMtx3::operator =( const rbMtx3& other )
 {
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     r[0] = other.r[0];
     r[1] = other.r[1];
     r[2] = other.r[2];
-
+#else
+    c[0] = other.c[0];
+    c[1] = other.c[1];
+    c[2] = other.c[2];
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     return *this;
 }
 
-inline rbVec3& rbMtx3::Row( int i )
+inline rbReal& rbMtx3::Elem( rbs32 row, rbs32 col )
 {
-    return r[i];
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
+    return r[row].e[col];
+#else
+    return c[col].e[row];
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 }
 
-inline rbVec3 rbMtx3::Column( int i )
+inline const rbReal& rbMtx3::Elem( rbs32 row, rbs32 col ) const
 {
-    return rbVec3( r[0].e[i], r[1].e[i], r[2].e[i] );
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
+    return r[row].e[col];
+#else
+    return c[col].e[row];
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
+}
+
+inline rbVec3 rbMtx3::Row( rbs32 i ) const
+{
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
+    return r[i];
+#else
+    return rbVec3( Elem(i,0), Elem(i,1), Elem(i,2) );
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
+}
+
+inline rbVec3 rbMtx3::Column( rbs32 i ) const
+{
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
+    return rbVec3( Elem(0,i), Elem(1,i), Elem(2,i) );
+#else
+    return c[i];
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 }
 
 inline rbMtx3::operator rbReal*()
 {
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     return (rbReal*)r[0];
+#else
+    return (rbReal*)c[0];
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 }
 
 inline void rbMtx3::Set( rbReal e00, rbReal e01, rbReal e02,
                          rbReal e10, rbReal e11, rbReal e12,
                          rbReal e20, rbReal e21, rbReal e22 )
 {
-    r[0].e[0] = e00;  r[0].e[1] = e01;  r[0].e[2] = e02;
-    r[1].e[0] = e10;  r[1].e[1] = e11;  r[1].e[2] = e12;
-    r[2].e[0] = e20;  r[2].e[1] = e21;  r[2].e[2] = e22;
+    Elem(0,0) = e00;  Elem(0,1) = e01;  Elem(0,2) = e02;
+    Elem(1,0) = e10;  Elem(1,1) = e11;  Elem(1,2) = e12;
+    Elem(2,0) = e20;  Elem(2,1) = e21;  Elem(2,2) = e22;
 }
 
 inline void rbMtx3::SetZero()
 {
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     r[0].SetZero();
     r[1].SetZero();
     r[2].SetZero();
+#else
+    c[0].SetZero();
+    c[1].SetZero();
+    c[2].SetZero();
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 }
 
 inline void rbMtx3::SetIdentity()
 {
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     r[0].Set( 1, 0, 0 );
     r[1].Set( 0, 1, 0 );
     r[2].Set( 0, 0, 1 );
+#else
+    c[0].Set( 1, 0, 0 );
+    c[1].Set( 0, 1, 0 );
+    c[2].Set( 0, 0, 1 );
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 }
 
 inline rbMtx3& rbMtx3::SetFromAxisAngle( const rbVec3& axis, rbReal radian )
@@ -338,15 +397,15 @@ inline rbMtx3& rbMtx3::SetFromAxisAngle( const rbVec3& axis, rbReal radian )
     rbReal y = axis.y;
     rbReal z = axis.z;
 
-    r[0].e[0] = x*x*C + c;
-    r[0].e[1] = x*y*C - z*s;
-    r[0].e[2] = z*x*C + y*s;
-    r[1].e[0] = x*y*C + z*s;
-    r[1].e[1] = y*y*C + c;
-    r[1].e[2] = y*z*C - x*s;
-    r[2].e[0] = z*x*C - y*s;
-    r[2].e[1] = y*z*C + x*s;
-    r[2].e[2] = z*z*C + c;
+    Elem(0,0) = x*x*C + c;
+    Elem(0,1) = x*y*C - z*s;
+    Elem(0,2) = z*x*C + y*s;
+    Elem(1,0) = x*y*C + z*s;
+    Elem(1,1) = y*y*C + c;
+    Elem(1,2) = y*z*C - x*s;
+    Elem(2,0) = z*x*C - y*s;
+    Elem(2,1) = y*z*C + x*s;
+    Elem(2,2) = z*z*C + c;
 
     return *this;
 }
@@ -386,24 +445,24 @@ inline void rbMtx3::Orthonormalize()
 
 inline void rbMtx3::Scale( rbReal f )
 {
-    for ( int row = 0; row < 3; ++row )
-        for ( int col = 0; col < 3; ++col )
-            r[row].e[col] *= f;
+    for ( rbs32 row = 0; row < 3; ++row )
+        for ( rbs32 col = 0; col < 3; ++col )
+            Elem(row, col) *= f;
 }
 
 inline rbMtx3 rbMtx3::GetTransposed() const
 {
-    return rbMtx3( r[0].e[0], r[1].e[0], r[2].e[0],
-                   r[0].e[1], r[1].e[1], r[2].e[1],
-                   r[0].e[2], r[1].e[2], r[2].e[2] );
+    return rbMtx3( Elem(0,0), Elem(1,0), Elem(2,0),
+                   Elem(0,1), Elem(1,1), Elem(2,1),
+                   Elem(0,2), Elem(1,2), Elem(2,2) );
 }
 
-inline rbMtx3& rbMtx3::Transepose()
+inline rbMtx3& rbMtx3::Transpose()
 {
     rbReal tmp;
-    tmp = r[0].e[1]; r[0].e[1] = r[1].e[0]; r[1].e[0] = tmp;
-    tmp = r[0].e[2]; r[0].e[2] = r[2].e[0]; r[2].e[0] = tmp;
-    tmp = r[1].e[2]; r[1].e[2] = r[2].e[1]; r[2].e[1] = tmp;
+    tmp = Elem(0,1); Elem(0,1) = Elem(1,0); Elem(1,0) = tmp;
+    tmp = Elem(0,2); Elem(0,2) = Elem(2,0); Elem(2,0) = tmp;
+    tmp = Elem(1,2); Elem(1,2) = Elem(2,1); Elem(2,1) = tmp;
 
     return *this;
 }
@@ -411,8 +470,8 @@ inline rbMtx3& rbMtx3::Transepose()
 // クラメルの公式による逆行列の計算
 inline rbMtx3 rbMtx3::GetInverse() const
 {
-#define E( row, col ) r[(row)].e[(col)]
-#define R( row, col ) result.r[(row)].e[(col)]
+#define E( row, col ) Elem((row), (col))
+#define R( row, col ) result.Elem((row), (col))
 #define DET( e00, e01, e10, e11 ) ((e00)*(e11)-(e01)*(e10))
 
     rbMtx3 result;
@@ -449,48 +508,66 @@ inline rbMtx3& rbMtx3::Invert()
 
 inline rbMtx3 rbMtx3::operator +( const rbMtx3& m ) const
 {
-    return rbMtx3( r[0].e[0]+m.r[0].e[0], r[0].e[1]+m.r[0].e[1], r[0].e[2]+m.r[0].e[2],
-                   r[1].e[0]+m.r[1].e[0], r[1].e[1]+m.r[1].e[1], r[1].e[2]+m.r[1].e[2],
-                   r[2].e[0]+m.r[2].e[0], r[2].e[1]+m.r[2].e[1], r[2].e[2]+m.r[2].e[2] );
+    return rbMtx3( Elem(0,0)+m.Elem(0,0), Elem(0,1)+m.Elem(0,1), Elem(0,2)+m.Elem(0,2),
+                   Elem(1,0)+m.Elem(1,0), Elem(1,1)+m.Elem(1,1), Elem(1,2)+m.Elem(1,2),
+                   Elem(2,0)+m.Elem(2,0), Elem(2,1)+m.Elem(2,1), Elem(2,2)+m.Elem(2,2) );
 }
 
 inline rbMtx3& rbMtx3::operator +=( const rbMtx3& m )
 {
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     r[0] += m.r[0];
     r[1] += m.r[1];
     r[2] += m.r[2];
+#else
+    c[0] += m.c[0];
+    c[1] += m.c[1];
+    c[2] += m.c[2];
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 
     return *this;
 }
 
 inline rbMtx3 rbMtx3::operator -( const rbMtx3& m ) const
 {
-    return rbMtx3( r[0].e[0]-m.r[0].e[0], r[0].e[1]-m.r[0].e[1], r[0].e[2]-m.r[0].e[2],
-                   r[1].e[0]-m.r[1].e[0], r[1].e[1]-m.r[1].e[1], r[1].e[2]-m.r[1].e[2],
-                   r[2].e[0]-m.r[2].e[0], r[2].e[1]-m.r[2].e[1], r[2].e[2]-m.r[2].e[2] );
+    return rbMtx3( Elem(0,0)-m.Elem(0,0), Elem(0,1)-m.Elem(0,1), Elem(0,2)-m.Elem(0,2),
+                   Elem(1,0)-m.Elem(1,0), Elem(1,1)-m.Elem(1,1), Elem(1,2)-m.Elem(1,2),
+                   Elem(2,0)-m.Elem(2,0), Elem(2,1)-m.Elem(2,1), Elem(2,2)-m.Elem(2,2) );
 }
 
 inline rbMtx3& rbMtx3::operator -=( const rbMtx3& m )
 {
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     r[0] -= m.r[0];
     r[1] -= m.r[1];
     r[2] -= m.r[2];
+#else
+    c[0] -= m.c[0];
+    c[1] -= m.c[1];
+    c[2] -= m.c[2];
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 
     return *this;
 }
 
 inline rbMtx3 rbMtx3::operator *( rbReal f ) const
 {
-    return rbMtx3( r[0].e[0]*f, r[0].e[1]*f, r[0].e[2]*f,
-                   r[1].e[0]*f, r[1].e[1]*f, r[1].e[2]*f,
-                   r[2].e[0]*f, r[2].e[1]*f, r[2].e[2]*f );
+    return rbMtx3( Elem(0,0)*f, Elem(0,1)*f, Elem(0,2)*f,
+                   Elem(1,0)*f, Elem(1,1)*f, Elem(1,2)*f,
+                   Elem(2,0)*f, Elem(2,1)*f, Elem(2,2)*f );
 }
 
 inline rbMtx3& rbMtx3::operator *=( rbReal f )
 {
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     r[0] *= f;
     r[1] *= f;
     r[2] *= f;
+#else
+    c[0] *= f;
+    c[1] *= f;
+    c[2] *= f;
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 
     return *this;
 }
@@ -498,12 +575,12 @@ inline rbMtx3& rbMtx3::operator *=( rbReal f )
 inline rbMtx3 rbMtx3::operator *( const rbMtx3& m ) const
 {
     rbMtx3 result;
-    for ( int row = 0; row < 3; ++row )
-        for ( int col = 0; col < 3; ++col )
-            result.r[row].e[col] =
-                r[row].e[0] * m.r[0].e[col] +
-                r[row].e[1] * m.r[1].e[col] +
-                r[row].e[2] * m.r[2].e[col] ;
+    for ( rbs32 row = 0; row < 3; ++row )
+        for ( rbs32 col = 0; col < 3; ++col )
+            result.Elem(row, col) =
+                Elem(row, 0) * m.Elem(0, col) +
+                Elem(row, 1) * m.Elem(1, col) +
+                Elem(row, 2) * m.Elem(2, col) ;
 
     return result;
 }
@@ -516,7 +593,11 @@ inline rbMtx3& rbMtx3::operator *=( const rbMtx3& m )
 
 inline rbVec3 rbMtx3::operator *( const rbVec3& v ) const
 {
+#if defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
     return rbVec3( r[0] * v, r[1] * v, r[2] * v );
+#else
+    return rbVec3( Row(0) * v, Row(1) * v, Row(2) * v );
+#endif // defined(RIGIDBOX_USE_ROW_MAJOR_MATRIX)
 }
 
 
