@@ -6,7 +6,17 @@
 #include <cmath>
 
 
+/// @define RIGIDBOX_USE_DOUBLE_PRECISION
+///
+/// Use double for the type of floating point numbers.
+
 // #define RIGIDBOX_USE_DOUBLE_PRECISION
+
+/// @define RIGIDBOX_USE_COLUMN_MAJOR_MATRIX
+///
+/// Switches the element layout of rbMtx3 from column-major to row-major.
+
+#define RIGIDBOX_USE_ROW_MAJOR_MATRIX
 
 
 #if defined(RIGIDBOX_USE_DOUBLE_PRECISION)
